k8s/api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      container-demo: api
  template:
    metadata:
      labels:
        container-demo: api
    spec:
      containers:
        - image: api:1.0
          name: api
          ports:
            - containerPort: 80
          imagePullPolicy: Never # Har vi Never här så hämtar den lokalt byggda, behöver inget Registry, bra för test
          # livenessProbe:
          #   httpGet:
          #     path: /api/data
          #     port: 80
          #   initialDelaySeconds: 3
          #   periodSeconds: 2
          #   successThreshold: 1
      restartPolicy: Always
