k8s/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      container-demo: client
  template:
    metadata:
      labels:
        container-demo: client
    spec:
      containers:
        - image: client:1.0
          name: client
          ports:
            - containerPort: 3000
          imagePullPolicy: Never # Har vi Never här så hämtar den lokalt byggda, behöver inget Registry
      restartPolicy: Always
