k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  ports:
  - name: "api"
    port: 5111
    targetPort: 80
  selector:
    container-demo: api
