k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  ports:
  - name: "api"
    port: 5111
    targetPort: 80
  selector:
    container-demo: api

---

apiVersion: v1
kind: Service
metadata:
  labels:
    container-demo: client
  name: client-service
spec:
  ports:
    - name: "default"
      port: 3000
      targetPort: 3000
  selector:
    container-demo: client
