k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    container-demo: web
  name: web
spec:
  ports:
    - name: "default"
      port: 3000
      targetPort: 3000
  selector:
    container-demo: web
status:
  loadBalancer: {}
